<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="60"
      android:baselineAligned="false"
      android:orientation="vertical" >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
      <LinearLayout
          android:id="@+id/container"
          android:orientation="vertical"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
        <!-- LOCATION -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            style="?android:listSeparatorTextViewStyle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false" >
          <!-- Geolocation (GPS Coords) -->
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="60"
              android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/geolocation" />
            <EditText
                android:id="@+id/geolocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/geolocation_hint" >
              <requestFocus />
            </EditText>
          </LinearLayout>
          <!-- Show Map Button -->
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight="40"
              android:orientation="vertical" >
            <Button
                android:id="@+id/show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:enabled="false" />
          </LinearLayout>
        </LinearLayout>
        <!-- STATUS -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            style="?android:listSeparatorTextViewStyle"/>
        <Button android:id="@+id/registration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
        <CheckBox
            android:id="@+id/isrented"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/isrented"/>
        <Button
            android:id="@+id/tenant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/landlord" />
        <Button android:id="@+id/residence_reportButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/residence_report"/>
      </LinearLayout>
    </ScrollView>
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="40"
      android:baselineAligned="false"
      android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
  </LinearLayout>
</LinearLayout>